--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -28,5 +28,5 @@
 		</video>
 		
 		<h2> Here's an RSS Feed: </h2>
-		<iframe width="250" height="750" class="rssdog" src="http://www.rssdog.com/index.htm?url=https%3A%2F%2Fnews.google.com%2Fnews%2Frss%2F%3Fned%3Dus%26hl%3Den&mode=html&showonly=&maxitems=0&showdescs=1&desctrim=0&descmax=0&tabwidth=100%25&linktarget=_blank&textsize=inherit&bordercol=%23d4d0c8&headbgcol=%23999999&headtxtcol=%23ffffff&titlebgcol=%23f1eded&titletxtcol=%23000000&itembgcol=%23ffffff&itemtxtcol=%23000000&ctl=0"></iframe>
+		<iframe width="250" height="750" class="rssdog" src="http://www.rssdog.com/index.htm?url=https%3A%2F%2Fnews.google.com%2Fnews%2Frss%2F%3Fned%3Dus%26hl%3Denmode=htmlshowonly=maxitems=0showdescs=1desctrim=0descmax=0tabwidth=100%25linktarget=_blanktextsize=inheritbordercol=%23d4d0c8headbgcol=%23999999headtxtcol=%23fffffftitlebgcol=%23f1ededtitletxtcol=%23000000itembgcol=%23ffffffitemtxtcol=%23000000ctl=0"></iframe>
 	</html>
