--- a/index.html
+++ b/index.html
@@ -5,5 +5,16 @@
 	</head>
 	<body>
 		<h1>Hello World</h1>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/mRf3-JkwqfU?start=180;color=white" frameborder="0" allowfullscreen></iframe>
+		
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d43360.81516375637!2d-122.57958844945806!3d47.21558541564504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5491aa007390205b%3A0x3443e3f0cf59ac5e!2sUniversity+Place%2C+WA!5e0!3m2!1sen!2sus!4v1506986373845" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+	
+		<video width="320" height="240" controls> <source src="http://www.html5videoplayer.net/videos/toystory.mp4" type="video/mp4">
+		</video>
+		
+		<audio controls>
+		<source src="https://www.mfiles.co.uk/mp3-downloads/rachmaninoff-prelude-in-g-minor.ogg" type="audio/ogg">
+        	<source src="https://www.mfiles.co.uk/mp3-downloads/rachmaninoff-prelude-in-g-minor.mp3" type="audio/mpeg">
+		</audio>
 	</body>
 </html>
