--- a/tags.html
+++ b/tags.html
@@ -4,12 +4,12 @@
 	<title>Alex's website! </title>
 </head>
 <body>
-	<h1>Alexander Kim</h1>
+	<h1><center>Alexander Kim</center></h1>
 	<h2>About Me</h2>
-	<p> I like to listen to any kind of music</p>
-	<p> I lived in Tacoma but eventually moved to University Place </P>
+	<p><b> I like to listen to any kind of music</b?</p>
+	<p><i> I lived in Tacoma but eventually moved to University Place </i></P>
 	
-	<h2>My Favorite Sites!</h2>
+	<h2><u>My Favorite Sites!</u></h2>
 	<ul>
 		<li> <a href="https://www.reddit.com/">Reddit</a>
 		</li>
@@ -27,7 +27,7 @@
 		</li>
 	</ul>
 	
-	<h2> My Favorite Pictures!</h2>
+	<h2><strike> My Favorite Pictures!</strike></h2>
 	<a href="https://www.google.com/search?q=potatoes&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjrrJGk_NfWAhXFjlQKHQ5dBWAQ_AUICigB&biw=1203&bih=733#imgrc=b-OlURFAdUevtM:">
 		<img src="https://www.almanac.com/sites/default/files/styles/primary_image_in_article/public/image_nodes/potatoes.jpg?itok=d3eNaCzk" 
 		title="potato" style="width:100px;height:100px;margin:5px">
